--- a/movies.html
+++ b/movies.html
@@ -62,224 +62,119 @@
         </div>
     </header>
     <main class="container-fluid">
-        <div class="py-3 row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-6 g-4 movies">
-            <div class="col bollywood">
-                <div class="card">
-                    <a href="movies/2021/Premaatur.html" class="card-link">
-                        <img src="images/poster.png" class="card-img-top" alt="premaatur" width="100%" height="100%">
-                        <h1 class="p-2 mb-0 h6">This is a long title of the article</h1>
-                    </a>
-                    <div class="d-flex justify-content-between p-2">
-                        <div class="rating-starts m-0">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                        </div>
-                        <div class="rating">
-                            <p class="m-0">3.5</p>
-                        </div>
-                    </div>
+        <div class="container-lg">
+            <div class="pt-5">
+                <div class="new-title pt-4">
+                    <h1 class="h4 text-capitalize">new released movies</h1>
+                    <p class="line"></p>
                 </div>
             </div>
-            <div class="col hollywood">
-                <div class="card">
-                    <a href="index.html" class="card-link">
-                        <img src="images/02.webp" class="card-img-top" alt="..." width="100%" height="100%">
-                        <h1 class="p-2 mb-0 h6">This is a long title of the article</h1>
-                    </a>
-                    <div class="d-flex justify-content-between p-2">
-                        <div class="rating-starts m-0">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                        </div>
-                        <div class="rating">
-                            <p class="m-0">3.5</p>
-                        </div>
+            <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-6 gx-4 movies">            
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/Shang-Chi-and-the-Legend-of-the-Ten-Rings.html" class="card-link">
+                            <img src="movies/images/Shang-Chi-and-the-Legend-of-the-Ten-Rings.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">Shang-Chi and the Legend of the Ten Rings</h1>
+                        </a>
                     </div>
                 </div>
-            </div>
-            <div class="col tollywood">
-                <div class="card">
-                    <a href="index.html" class="card-link">
-                        <img src="images/03.webp" class="card-img-top" alt="..." width="100%" height="100%">
-                        <h1 class="p-2 mb-0 h6">This is a long title of the article</h1>
-                    </a>
-                    <div class="d-flex justify-content-between p-2">
-                        <div class="rating-starts m-0">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                        </div>
-                        <div class="rating">
-                            <p class="m-0">3.5</p>
-                        </div>
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/Malignant.html" class="card-link">
+                            <img src="movies/images/Malignant.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">Malignant</h1>
+                        </a>
                     </div>
                 </div>
-            </div>
-            <div class="col kollywood">
-                <div class="card">
-                    <a href="index.html" class="card-link">
-                        <img src="images/04.webp" class="card-img-top" alt="..." width="100%" height="100%">
-                        <h1 class="p-2 mb-0 h6">This is a long title of the article</h1>
-                    </a>
-                    <div class="d-flex justify-content-between p-2">
-                        <div class="rating-starts m-0">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                        </div>
-                        <div class="rating">
-                            <p class="m-0">3.5</p>
-                        </div>
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/Gunpowder-Milkshake.html" class="card-link">
+                            <img src="movies/images/Gunpowder-Milkshake.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">Gunpowder Milkshake</h1>
+                        </a>
                     </div>
                 </div>
-            </div>
-            <div class="col mollywood">
-                <div class="card">
-                    <a href="index.html" class="card-link">
-                        <img src="images/05.webp" class="card-img-top" alt="..." width="100%" height="100%">
-                        <h1 class="p-2 mb-0 h6">This is a long title of the article</h1>
-                    </a>
-                    <div class="d-flex justify-content-between p-2">
-                        <div class="rating-starts m-0">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                        </div>
-                        <div class="rating">
-                            <p class="m-0">3.5</p>
-                        </div>
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/The-Conjuring-The-Devil-Made-Me-Do-It.html" class="card-link">
+                            <img src="movies/images/The-Conjuring-The-Devil-Made-Me-Do-It.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">The Conjuring: The Devil Made Me Do It</h1>
+                        </a>
                     </div>
                 </div>
-            </div>
-            <div class="col sandalwood">
-                <div class="card">
-                    <a href="index.html" class="card-link">
-                        <img src="images/01.webp" class="card-img-top" alt="..." width="100%" height="100%">
-                        <h1 class="p-2 mb-0 h6">This is a long title of the article</h1>
-                    </a>
-                    <div class="d-flex justify-content-between p-2">
-                        <div class="rating-starts m-0">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                        </div>
-                        <div class="rating">
-                            <p class="m-0">3.5</p>
-                        </div>
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/Chehre.html" class="card-link">
+                            <img src="movies/images/Chehre.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">Chehre</h1>
+                        </a>
                     </div>
                 </div>
-            </div>
-            <div class="col sandalwood">
-                <div class="card">
-                    <a href="movies/2021/moviename.html" class="card-link">
-                        <img src="images/01.webp" class="card-img-top" alt="..." width="100%" height="100%">
-                        <h1 class="p-2 mb-0 h6">This is a long title of the article</h1>
-                    </a>
-                    <div class="d-flex justify-content-between p-2">
-                        <div class="rating-starts m-0">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                        </div>
-                        <div class="rating">
-                            <p class="m-0">3.5</p>
-                        </div>
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/Thalaivi.html" class="card-link">
+                            <img src="movies/images/Thalaivi.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">Thalaivi</h1>
+                        </a>
                     </div>
                 </div>
-            </div>
-            <div class="col bollywood">
-                <div class="card">
-                    <a href="index.html" class="card-link">
-                        <img src="images/02.webp" class="card-img-top" alt="..." width="100%" height="100%">
-                        <h1 class="p-2 mb-0 h6">This is a long title of the article</h1>
-                    </a>
-                    <div class="d-flex justify-content-between p-2">
-                        <div class="rating-starts m-0">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                        </div>
-                        <div class="rating">
-                            <p class="m-0">3.5</p>
-                        </div>
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/Bellbottom.html" class="card-link">
+                            <img src="movies/images/Bellbottom.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">Bellbottom</h1>
+                        </a>
                     </div>
                 </div>
-            </div>
-            <div class="col hollywood">
-                <div class="card">
-                    <a href="index.html" class="card-link">
-                        <img src="images/03.webp" class="card-img-top" alt="..." width="100%" height="100%">
-                        <h1 class="p-2 mb-0 h6">This is a long title of the article</h1>
-                    </a>
-                    <div class="d-flex justify-content-between p-2">
-                        <div class="rating-starts m-0">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                        </div>
-                        <div class="rating">
-                            <p class="m-0">3.5</p>
-                        </div>
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/Laabam.html" class="card-link">
+                            <img src="movies/images/Laabam.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">Laabam</h1>
+                        </a>
                     </div>
                 </div>
-            </div>
-            <div class="col tollywood">
-                <div class="card">
-                    <a href="index.html" class="card-link">
-                        <img src="images/04.webp" class="card-img-top" alt="..." width="100%" height="100%">
-                        <h1 class="p-2 mb-0 h6">This is a long title of the article</h1>
-                    </a>
-                    <div class="d-flex justify-content-between p-2">
-                        <div class="rating-starts m-0">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                        </div>
-                        <div class="rating">
-                            <p class="m-0">3.5</p>
-                        </div>
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/Seetimaarr.html" class="card-link">
+                            <img src="movies/images/Seetimaarr.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">Seetimaarr</h1>
+                        </a>
+                    </div>
+                </div> 
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/Raja-Raja-Chora.html" class="card-link">
+                            <img src="movies/images/Raja-Raja-Chora.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">Raja Raja Chora</h1>
+                        </a>
                     </div>
                 </div>
-            </div>
-            <div class="col others">
-                <div class="card">
-                    <a href="index.html" class="card-link">
-                        <img src="images/05.webp" class="card-img-top" alt="..." width="100%" height="100%">
-                        <h1 class="p-2 mb-0 h6">This is a long title of the article</h1>
-                    </a>
-                    <div class="d-flex justify-content-between p-2">
-                        <div class="rating-starts m-0">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                        </div>
-                        <div class="rating">
-                            <p class="m-0">3.5</p>
-                        </div>
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/Asmee.html" class="card-link">
+                            <img src="movies/images/Asmee.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">Asmee</h1>
+                        </a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <a href="movies.html" class="card-link">
+                            <img src="view.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                        </a>
                     </div>
                 </div>
             </div>
